test/valid/CalculaIdades/CalculaIdadeMercurio.plume
/**
 * Classe que calcula a idade em mercurio. 
 *
 * @author 37060, Roberto Silva
 */
class CalculaIdadeMercurio extends CalculaIdade is
	
	method override calcIdade : (idade : Integer) -> Integer is
		(idade*365)/88